fix: large layout shifts

--- a/src/features/Product/List/Item/ProductListItem.css
+++ b/src/features/Product/List/Item/ProductListItem.css
@@ -9,7 +9,7 @@
 .product-card__img {
   cursor: pointer;
   width: 100%;
-  height: auto;
+  aspect-ratio: 1 / 1;
 }
 
 .product-card__featured {
